--- a/public/css/posts_css.css
+++ b/public/css/posts_css.css
@@ -9,6 +9,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    min-height: 100%;
 }
 html, body{
     font-family: 'Roboto Condensed', sans-serif;
