--- a/public/css/user.css
+++ b/public/css/user.css
@@ -3,4 +3,5 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    min-height: 100%;
 }
